[gd_scene load_steps=13 format=3 uid="uid://dcx535yy3ub28"]

[ext_resource type="Script" path="res://assets/scripts/troop_tank.gd" id="1_nhw18"]
[ext_resource type="Script" path="res://assets/scripts/components/command_component.gd" id="2_wayhf"]
[ext_resource type="Script" path="res://assets/scripts/components/hitbox_component.gd" id="3_jp305"]
[ext_resource type="Script" path="res://assets/scripts/components/perception_component.gd" id="4_nahql"]
[ext_resource type="Script" path="res://assets/scripts/components/projectile_spawner_component.gd" id="5_t7q8l"]
[ext_resource type="Texture2D" uid="uid://2ajqh0fldyax" path="res://assets/images/tank.png" id="6_5wky4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yy1wx"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idtss"]
size = Vector2(50.8602, 82.3729)

[sub_resource type="CircleShape2D" id="CircleShape2D_4ni87"]
radius = 334.136

[sub_resource type="Animation" id="Animation_vauwb"]
resource_name = "shoot"
length = 0.333337
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_21rxp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xx3ul"]
_data = {
"RESET": SubResource("Animation_21rxp"),
"shoot": SubResource("Animation_vauwb")
}

[node name="TroopTank" type="CharacterBody2D" groups=["player_troops"]]
script = ExtResource("1_nhw18")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yy1wx")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0, 0.646135, 0.244857, 1)
polygon = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)

[node name="CommandComponent" type="Node" parent="."]
script = ExtResource("2_wayhf")
aprox_distance = 22

[node name="HitboxComponent" type="Area2D" parent="."]
scale = Vector2(0.816609, 0.816609)
collision_layer = 2
monitoring = false
script = ExtResource("3_jp305")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(1.22458, 6.57204)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_idtss")

[node name="PerceptionComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("4_nahql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerceptionComponent"]
position = Vector2(3, 2)
scale = Vector2(0.137701, 0.137557)
shape = SubResource("CircleShape2D_4ni87")

[node name="ProjectileSpawnerComponent" type="Node2D" parent="."]
position = Vector2(8, 0)
script = ExtResource("5_t7q8l")
fire_delay = 1.0
multishot = 2
spread = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(44, 7)
texture = ExtResource("6_5wky4")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xx3ul")
}
